--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,11 +1,17 @@
-/* 
+.fondo{
+    background-color: black;
+    border-radius: 10px;
+    border: 3px solid rgb(37, 37, 37);
+    margin: 100px;
+    padding: 10px;
+    font-size: 50px;
+}
 
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
-
-*/
+ .digito{
+    background-color: rgb(22, 22, 22);
+    margin: 5px 5px;
+    padding: 5px 15px;
+    color: white;
+    border-radius: 10px;
+    border: 2px solid grey;
+} 
